20_poc/petunia/opentelemetry/jaeger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: jaeger
 labels:
    app: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:1.56
        ports:
        - containerPort: 16686 # UI
        - containerPort: 4317  # OTLP gRPC
        - containerPort: 4318  # OTLP HTTP
        - containerPort: 14268 # Jaeger ingest
        - containerPort: 14250 # Jaeger gRPC ingest
