20_poc/petunia/opentelemetry/jaeger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  labels:
    app: jaeger
spec:
  selector:
    app: jaeger
  ports:
  - name: ui
    port: 80
    targetPort: 16686
  - name: otlp-grpc
    port: 4317
    targetPort: 4317
  - name: otlp-http
    port: 4318
    targetPort: 4318
  - name: jaeger-ingest
    port: 14268
    targetPort: 14268
  - name: jaeger-grpc
    port: 14250
    targetPort: 14250
